--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
   "scripts": {
     "build": "shx rm -rf ./lib && rollup -c",
     "types": "shx rm -rf ./types && tsc -p jsconfig.json",
-    "prepare": "husky install",
-    "test": "ava"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@hbauer/eslint-config": "^1.5.0",
     "@hbauer/prettier-config": "^1.1.0",
-    "ava": "^5.2.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.37.0",
     "eslint-plugin-import": "^2.27.5",
