--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@hbauer/eslint-config": "^1.5.0",
     "@hbauer/prettier-config": "^1.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.37.0",
     "eslint-plugin-import": "^2.27.5",
