--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hbauer/haste",
   "version": "0.1.3",
-  "type": "module",
+  "type": "commonjs",
   "bin": "./lib/index.js",
   "files": [
     "lib",
