--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hbauer/haste",
   "version": "0.1.5",
-  "type": "commonjs",
+  "type": "module",
   "bin": "./lib/index.js",
   "files": [
     "lib",
@@ -32,6 +32,7 @@
     "husky": "^8.0.3",
     "prettier": "^2.8.7",
     "rollup": "^3.20.2",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
     "shx": "^0.3.4",
     "typescript": "^5.0.3"
   },
